...
    <KeyboardAvoidingView
      behavior={Platform.OS === 'ios' ? 'padding' : 'height'}
      style={styles.container}
    >
      <LanguageSwitch style={styles.langSwitch} />
      <View style={styles.header}>
        <Text style={styles.title}>HabitQuest</Text>
        <Text style={styles.subtitle}>
          {mode === 'sign-in' ? T.auth_welcome_back : T.auth_begin_quest}
        </Text>
      </View>

      <View style={styles.form}>
...
